# zrtc

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md
.github/workflows/: publish.yml
client/: package-lock.json  package.json
client/src/: chunking.js  index.js  qr.js  signalling.js  webrtc.js  zrtc.js
example/: index.html  package-lock.json  package.json  vite.config.js
example/src/: App.vue  style.css
openspec/changes/archive/2026-03-15-channel-config-fields/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-signal-validation-cors-config/: design.md  proposal.md
openspec/changes/archive/2026-03-15-signal-validation-cors-config/signal-validation-cors-config/: tasks.md
openspec/changes/archive/2026-03-15-signal-validation-cors-config/specs/cors-config/: spec.md
openspec/changes/archive/2026-03-15-signal-validation-cors-config/specs/signal-validation/: spec.md
openspec/changes/channel-config-fields/: tasks.md
openspec/changes/channel-config-fields/specs/channel-config/: spec.md
tests/: test-chunking.js  test-worker-api.sh
worker/: Cargo.toml  typescript  wrangler.toml
worker/src/: crypto.rs  handlers.rs  lib.rs  storage.rs  vacuum.rs
