[package]
name = "zrtc-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
